# ai-paper-reader

./: .gitignore  README.md
apr_backend/: .env.example  .gitignore  README.md  pyproject.toml
apr_backend/conf/: app_config.yaml
apr_backend/src/: __init__.py  config.py  llm.py  main.py
apr_backend/src/api/: ai.py  chat.py  health.py  notes.py  papers.py  pdf.py
apr_backend/tests/: test_ai.py  test_config.py  test_main.py  test_notes.py  test_pdf.py
apr_frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
apr_frontend/src/app/: globals.css  layout.tsx  page.tsx
apr_frontend/src/app/dashboard/: page.tsx
apr_frontend/src/app/reader/: layout.tsx
apr_frontend/src/app/reader/[paperId]/: page.tsx
apr_frontend/src/components/ai/: ai-assistant.tsx
apr_frontend/src/components/common/: dashboard-content.tsx  navbar.tsx
apr_frontend/src/components/notes/: notes-editor.tsx
apr_frontend/src/components/reader/: pdf-viewer.tsx  reader-content.tsx
apr_frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  scroll-area.tsx  toaster.tsx  tooltip.tsx
apr_frontend/src/lib/: utils.ts
apr_frontend/src/lib/api/: index.ts
apr_frontend/src/lib/types/: index.ts
apr_frontend/src/store/: index.ts
conf/: config.yaml
